<resources>
    <string name="app_name">Alexa</string>

    <!-- General Info Fragment -->
    <string name="general_info_title">General Info</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender<font color="#FF0000">*</font></string>
    <string name="weight">Weight in kg<font color="#FF0000">*</font></string>
    <string name="height">Height in cm<font color="#FF0000">*</font></string>
    <string name="age">Age<font color="#FF0000">*</font></string>
    <string name="next_btn">Next</string>
    <string name="all_fields_required">All fields are required</string>

    <!--  Procedure Fragment  -->
    <string name="procedure_title">How to use?</string>
    <string name="instructions">- Lightly place your index finger on \n   the rear camera.\n- Make sure the camera is fully \n   covered. \n- Measure in a shaded environment. \n- Don\'t move your finger until the \n   measurement is complete. \n- Finally place your finger then press \n   start. </string>

  <!--  Process Fragment  -->
    <string name="process_title">Monitoring the Vital Signs ...</string>
    <string name="title_sex">Sex</string>
    <string name="title_age">Age</string>
    <string name="title_weight">Weight</string>
    <string name="title_height">Height</string>
    <string name="poor_intensity"><font color="#FF0000">Poor red intensity.</font></string>
    <string name="no_frame"><font color="#FF0000">No frame to process further.</font></string>
    <string name="measure_failed"><font color="#FF0000">Measurement failed.</font></string>

    <!--Result Fragment  -->
    <string name="result_title">Vital Signs</string>
    <string name="heart_rate">Heart Rate</string>
    <string name="respiration_rate">Respiration Rate</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="O2_saturation">O2 Saturation</string>
    <string name="title_activity_settings">Settings</string>

</resources>