<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Process">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/preview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ll_user_sex"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_sex"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_user_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Female"
                android:textAlignment="center"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user_age"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_age"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_user_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Female"
                android:textAlignment="center"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user_weight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_weight"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_user_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="75 kg"
                android:textAlignment="center"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_user_height"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_height"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_user_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="175 cm"
                android:textAlignment="center"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <SurfaceView
        android:id="@+id/preview"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/VSPB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2" />

    <ProgressBar
        android:id="@+id/VSPB"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="24dp"
        android:indeterminate="false"
        android:max="26"
        android:progress="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>